--- a/views/companymanagement.ejs
+++ b/views/companymanagement.ejs
@@ -17,70 +17,82 @@
 <body>
   <%- include('navbar') %>
 
-
-  
-  <section class="intro">
-    <div class="bg-image h-100" style="background-color: #f5f7fa;">
-      <div class="mask d-flex align-items-center h-100">
-        <div class="container">
-          <div class="row justify-content-center">
-            <div class="col-12">
-              <div class="card">
-                <div class="card-body p-0">
-                  <div class="table-responsive table-scroll" data-mdb-perfect-scrollbar="true" style="position: relative; height: 700px;">
-                    <% if (companymanage.length > 0) { %>
-                    <table class="table table-striped mb-0">
-                      <thead style="background-color: #0d6af5;">
-                        <tr>
-                          <th scope="col">Company ID</th>
-                          <th scope="col">Email</th>
-                          <th scope="col">Username</th>
-                          <th scope="col">Image</th>
-                          <th scope="col">status</th>
-                          <th scope="col"></th>
-                          <th scope="col"></th>
-
-                         
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <% companymanage.forEach((company) => { %>
-                        <!-- Table rows for class information -->
-                        <tr>
-                          <td><%= company.id_company %></td>
-                          <td><%= company.email %></td>
-                          <td><%= company.username %></td>
-                          <td><%= company.status %></td>
-                          <td> <img src="/image/<%= company.image %>" class="img-fluid"></td>
-                          <td> 
-                            <form action="/admin/bancompany/<%= company.id_company %>" method="post">
-                            <input type="hidden" name="id" value="<%= company.id_company %>">
-                            <button type="submit" name="action" value="ban">Ban User</button>
-                          </form>
-                        </td>
-                        <td>
-                          <form action="/admin/unbancompany/<%=  company.id_company %>" method="post">
-                            <input type="hidden" name="id" value="<%= company.id_company %>">
-                            <button type="submit" name="action" value="unban">Unban User</button>
-                          </form>
-                        </td>
-                        </tr>
-                        <% }); %>
-                        <!-- ... (other rows for class information) ... -->
-                      </tbody>
-                    </table>
-                    <% } %>
-                  </div>
+  <div class="card">
+    <div class="table-responsive">
+      <table class="table align-items-center mb-0">
+        <% if (companymanage.length > 0) { %>
+        <thead>
+          <tr>
+            <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Company ID</th>
+            <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Image</th>
+            <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Username</th>
+            <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Email</th>
+            <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">status</th>
+            <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Ban</th>
+            <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Unban</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% companymanage.forEach((company) => { %>
+          <tr>
+            <td>
+              <div class="d-flex px-2">
+                <div>
+                  <%= company.id_company %>
                 </div>
               </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  
+            </td>
+            <td>
+              <img src="/image/<%= company.image %>" class="avatar avatar-sm rounded-circle me-2">
 
+            </td>
+
+            <td class="align-middle text-center">
+              <div class="d-flex align-items-center">
+                <b><%= company.username %></b>
+              </div>
+            </td>
+            
+            <td class="align-middle text-center">
+              <div class="d-flex align-items-center">
+                <span class="me-2 "><%= company.email %></span>
+              </div>
+            </td>
+            <td class="align-middle text-center">
+              <div class="d-flex align-items-center">
+                <span class="me-2 text-xs"><%= company.status %></span>
+              </div>
+            </td>
+            <td class="align-middle text-center">
+              <div class="d-flex align-items-center">
+                <form action="/admin/bancompany/<%= company.id_company %>" method="post">
+                  <input type="hidden" name="id" value="<%= company.id_company %>">
+                  <button type="submit" name="action" class="btn btn-outline-danger" value="ban">Ban Company</button>
+                </form>
+              </div>
+            </td>
+            <td class="align-middle text-center">
+              <div class="d-flex align-items-center">
+                <form action="/admin/unbancompany/<%=  company.id_company %>" method="post">
+                  <input type="hidden" name="id" value="<%= company.id_company %>">
+                  <button type="submit" name="action" class="btn btn-outline-dark" value="unban">Unban Company</button>
+                </form>
+              </div>
+            </td>
+            
+  
+          
+  
+          <% }); %>
+        </tbody>
+        <% } %>
+      </table>
+    </div>
+    </div>
+
+
+  
 
 
 
