--- a/views/addjob.ejs
+++ b/views/addjob.ejs
@@ -27,7 +27,7 @@
       </div>
 
 
-
+      
 
       <div class="inputbox-regis">
         <input type="text" id="detail_work"  name="detail_work"  />
@@ -76,6 +76,11 @@
                 <input type="datetime-local" id="deadline_offer" name= "deadline_offer"/>
                 <label for="deadline_offer">deadline_offer</label>
                  </div>
+
+                 <div class="form-group">
+                  <label for="example-datetime-local-input" class="form-control-label">Datetime</label>
+                  <input class="form-control" type="datetime-local" value="2018-11-23T10:30:00" id="example-datetime-local-input">
+              </div>
 
                  <div class="inputbox-regis">
                   <ion-icon name="mail-outline"></ion-icon>
