--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -11,7 +11,8 @@
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/style.css">
-    <style>.gradient-custom {
+    <style>
+    .gradient-custom {
       /* fallback for old browsers */
       background: #f6d365;
       
