--- a/views/Footer.ejs
+++ b/views/Footer.ejs
@@ -1,143 +1,150 @@
   <!-- Footer -->
-  <footer class="text-center text-lg-start bg-white text-muted bg-primary">
-    <!-- Section: Social media -->
-    <%= webpage[0].namepage %>
-    <%= webpage[0].address %>
-    <%= webpage[0].email %>
-    <%= webpage[0].call %>
-    <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom bg-warning">
-      <!-- Left -->
-      <div class="me-5 d-none d-lg-block">
-        <span>Get connected with us on social networks:</span>
-      </div>
-      <!-- Left -->
   
-      <!-- Right -->
-      <div >
-        <a href="" class="me-4 link-secondary">
-          <%= webpage[0].address %>
-          <i class="bi bi-facebook"></i>
-        </a>
-        <a href="" class="me-4 link-secondary">
-          <%= webpage[0].address %>
-          <i class="bi bi-twitter"></i>
-        </a>
-        <a href="" class="me-4 link-secondary">
-          <%= webpage[0].address %>
-          <i class="bi bi-google"></i>
-        </a>
-        <a href="" class="me-4 link-secondary">
-          <%= webpage[0].address %>
-          <i class="bi bi-instagram"></i>
-        </a>
-        <a href="" class="me-4 link-secondary">
-          <%= webpage[0].address %>
-          <i class="bi bi-linkedin"></i>
-        </a>
-        <a href="" class="me-4 link-secondary">
-          <%= webpage[0].address %>
-          <i class="bi bi-github"></i>
-        </a>
-      </div>
-      <!-- Right -->
-    </section>
-    <!-- Section: Social media -->
+
+
+
+
+
+
+
+
+
+
+
   
-    <!-- Section: Links  -->
-    <section class="">
-      <div class="container text-center text-md-start mt-5">
-        <!-- Grid row -->
-        <div class="row mt-3">
+  
+
+
+  <!-- Remove the container if you want to extend the Footer to full width. -->
+<div class="container my-1">
+  <!-- Footer -->
+  <footer
+          class="text-center text-lg-start text-white"
+          style="background-color: #929fba"
+          >
+    <!-- Grid container -->
+    <div class="container p-4 pb-0">
+      <!-- Section: Links -->
+      <section class="">
+        <!--Grid row-->
+        <div class="row">
           <!-- Grid column -->
-          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-            <!-- Content -->
-            <h6 class="text-uppercase fw-bold mb-4">
-              <i class="bi bi-gem me-3 text-secondary"></i> <%= webpage[0].address %>
+          <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+            <h6 class="text-uppercase mb-4 font-weight-bold">
+              <%= webpage[0].namepage %>
             </h6>
             <p>
-              Here you can use rows and columns to organize your footer content. Lorem ipsum
-              dolor sit amet, consectetur adipisicing elit.
+              Here you can use rows and columns to organize your footer
+              content. Lorem ipsum dolor sit amet, consectetur adipisicing
+              elit.
             </p>
           </div>
           <!-- Grid column -->
-  
+
+          <hr class="w-100 clearfix d-md-none" />
+
           <!-- Grid column -->
-          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-            <!-- Links -->
-            <h6 class="text-uppercase fw-bold mb-4">
-              Products
-            </h6>
+          <!-- <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+            <h6 class="text-uppercase mb-4 font-weight-bold">Products</h6>
             <p>
-              <a href="#!" class="text-reset">Angular</a>
+              <a class="text-white">MDBootstrap</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">React</a>
+              <a class="text-white">MDWordPress</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Vue</a>
+              <a class="text-white">BrandFlow</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Laravel</a>
+              <a class="text-white">Bootstrap Angular</a>
             </p>
+          </div> -->
+          <!-- Grid column -->
+
+          <hr class="w-100 clearfix d-md-none" />
+
+          <!-- Grid column -->
+          <hr class="w-100 clearfix d-md-none" />
+        
+
+          <!-- Grid column -->
+          <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+            <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
+            <p><i class="fas fa-home mr-3"></i> <%= webpage[0].address %></p>
+            <p><i class="fas fa-envelope mr-3"></i><%= webpage[0].email %></p>
+            <p><i class="fas fa-phone mr-3"></i><%= webpage[0].call %></p>
+            
           </div>
           <!-- Grid column -->
-  
+
           <!-- Grid column -->
-          <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-            <!-- Links -->
-            <h6 class="text-uppercase fw-bold mb-4">
-              Useful links
-            </h6>
-            <p>
-              <a href="#!" class="text-reset">Pricing</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Settings</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Orders</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Help</a>
-            </p>
+          <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+            <h6 class="text-uppercase mb-4 font-weight-bold">Follow us</h6>
+
+            <!-- Facebook -->
+            <a
+               class="btn btn-primary btn-floating m-1 rounded-circle"
+               style="background-color: #3b5998"
+               href="#!"
+               role="button"
+               ><i class="fab fa-facebook-f"></i
+              ></a>
+
+            <!-- Twitter -->
+            <a
+               class="btn btn-primary btn-floating m-1 rounded-circle"
+               style="background-color: #55acee"
+               href="#!"
+               role="button"
+               ><i class="fab fa-twitter"></i
+              ></a>
+
+            <!-- Google -->
+            <a
+               class="btn btn-primary btn-floating m-1 rounded-circle"
+               style="background-color: #dd4b39"
+               href="#!"
+               role="button"
+               ><i class="fab fa-google"></i
+              ></a>
+
+            <!-- Instagram -->
+            <a
+               class="btn btn-primary btn-floating m-1 rounded-circle"
+               style="background-color: #ac2bac"
+               href="#!"
+               role="button"
+               ><i class="fab fa-instagram"></i
+              ></a>
+
+            <!-- Linkedin -->
+            <a
+               class="btn btn-primary btn-floating m-1 rounded-circle"
+               style="background-color: #0082ca"
+               href="#!"
+               role="button"
+               ><i class="fab fa-linkedin-in"></i
+              ></a>
+            <!-- Github -->
+            <a
+               class="btn btn-primary btn-floating m-1 rounded-circle"
+               style="background-color: #333333"
+               href="#!"
+               role="button"
+               ><i class="fab fa-github"></i
+              ></a>
           </div>
-          <!-- Grid column -->
-  
-          <!-- Grid column -->
-          <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-            <!-- Links -->
-            <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-            <p><i class="bi bi-home me-3 text-secondary"></i> New York, NY 10012, US</p>
-            <p>
-              <i class="bi bi-envelope me-3 text-secondary"></i>
-              info@example.com
-            </p>
-            <p><i class="bi bi-phone me-3 text-secondary"></i> + 01 234 567 88</p>
-            <p><i class="bi bi-print me-3 text-secondary"></i> + 01 234 567 89</p>
-          </div>
-          <!-- Grid column -->
         </div>
-        <!-- Grid row -->
-      </div>
-    </section>
-    <!-- Section: Links  -->
-
-
-
-
-
-
-
-
-
-
-
-  
-    <!-- Copyright -->
-    <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025);">
-      © 2021 Copyright:
-      <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+        <!--Grid row-->
+      </section>
+      <!-- Section: Links -->
     </div>
+    <!-- Grid container -->
+
+    <!-- Copyright -->
+   
     <!-- Copyright -->
   </footer>
   <!-- Footer -->
+</div>
+<!-- End of .container -->
